fixed everything wrong with first version of JWT auth, added new swag annotations for protected routes
